better handling of resource path (URL)
git-svn-id: file:///home/hoijui/src/IsaViz/tmp2/zvtm.svn/code@2611 74e165f3-c697-40a6-91af-552c8936d7fe